fix(text-editor): overflow of links

--- a/apps/web/src/components/text-editor/text-editor.module.scss
+++ b/apps/web/src/components/text-editor/text-editor.module.scss
@@ -1,8 +1,12 @@
 @use "~/utils" as g;
 
+.wrapper {
+  overflow: hidden;
+}
+
 .editor {
   width: 100%;
-  display:flex;
+  display: flex;
   flex-direction: column;
   gap: g.$padding-xsm;
 }
